tests/fails/long_comment.lt
   
   --```
	This is un elaborate Lua-style, long comment.
  space indented
	    		 space mix with tab   	
  
]==] ``

	    --````
		
	   -- at end of file
	   
	     ```
